fix bug jumping box after hovering

--- a/css/main.scss
+++ b/css/main.scss
@@ -112,7 +112,7 @@ body {
 }
 
 .card {
-  padding: 1.3rem 1.4rem;
+  padding: 1.5rem;
   border-radius: 0.5rem;
   background-color: $gray-100;
   transition: transform 1s ease;
